# nexushub

./: README.md  index.html  package-lock.json  package.json  tailwind.config.js
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/: ErrorBoundary.tsx  LanguageSelector.tsx  Sidebar.tsx  ThemeToggle.tsx
src/components/ui/: scroll-area.tsx  separator.tsx  tabs.tsx  textarea.tsx
src/lib/: i18n.ts  useInputHistory.ts
src/tools/api-client/: index.tsx
src/tools/api-key-manager/: index.tsx
src/tools/cron-parser/: index.tsx
src/tools/json-formatter/: index.tsx
src/tools/prompt-tpl/: index.tsx
src/tools/sql-formatter/: index.tsx
src/tools/timestamp/: index.tsx
src/tools/todos/: index.tsx
src/tools/url-codec/: index.tsx
tools/: README.md  package-lock.json  package.json  vite.config.ts
tools/src/: App.tsx
tools/src/tools/json-formatter/: index.tsx
tools/src/tools/sql-formatter/: index.tsx
tools/src/tools/todos/: index.tsx
